fix overflow

--- a/pages/style.module.scss
+++ b/pages/style.module.scss
@@ -165,3 +165,8 @@
     margin-top: -2px;
   }
 }
+
+.popover {
+  max-height: 400px;
+  overflow-y: scroll;
+}
